Set it to automatically go to Recognitions page

--- a/index.htm
+++ b/index.htm
@@ -159,7 +159,7 @@ h3 {
 </body>
 <script>
 window.onload = function () {
-  //switchPage("home");
+  switchPage("recognitions");
 }
 
 function switchPage(key) {
